add auth to rating api
