# docs/swagger.json
@@ -20,6 +20,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Authentication header",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "RestaurantID header",
                         "name": "RestaurantID",
                         "in": "header",
@@ -106,6 +113,9 @@
                     "type": "string"
                 },
                 "restaurantID": {
+                    "type": "string"
+                },
+                "sentiment": {
                     "type": "string"
                 }
             }
